# pereginefrc_analysis

./: README.md  pyproject.toml
peregrinefrc_analysis/: __init__.py  analysis.py  analysis_2023.py  analysis_2025.py  blue_alliance_client.py  demo.py  errors.py  peregrine_client.py  peregrine_server.py
scripts/: list_match_reports.py  list_users.py  total_cycle_count_2025.py  total_game_pieces_analysis.py  total_game_pieces_analysis_2023.py
tests/: fixtures.py  test_analysis.py  test_analysis_1.py  test_analysis_2.py  test_analysis_2023.py  test_authentication.py  test_reports.py  test_years.py
