[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "peregrinefrc-analysis"
dynamic = ["version"]
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "requests>=2.31.0, <3",
    "pandas>=2.1.4, <3",
]

[tool.hatch.version]
path = "peregrinefrc_analysis\\__init__.py"